---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "type _ : pointer int"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..20): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..20): []
        StmtItem@(FileId(1), 0..20): ItemId(0)
          Type@(FileId(1), 0..20): "_"@(FileId(1), 5..6)
            Pointer@(FileId(1), 9..20): Checked
              Primitive@(FileId(1), 17..20): Int
error at (FileId(1), 17..20): unexpected token
| error for (FileId(1), 17..20): expected `to`, but found `int`

